Rename /engine route to /config
